--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -2,7 +2,6 @@
 // General and page-specific styles
 /////////////////////////////////////////////////////////
 
-
 // Box Model
 
 html {
@@ -111,6 +110,11 @@ h1 {
     font-size: 2.5em;
     line-height: 1.5em;
 
+    a, a:visited {
+        text-decoration: none;
+        color: $color-dark;
+    }
+
     // Subtitle ("Web Developer")
     span {
         color: $color-accent;
@@ -163,14 +167,8 @@ nav {
 // Footer
 
 footer.row {
-    // font-size: 1.2em;
-    //margin-top: 100px;
     margin-top: 0;
     padding-top: 50px;
-
-    a {
-        // font-weight: bold;
-    }
 }
 
 #social-links {
